--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
 
   <section id="products" class="section">
     <h2>Our Products</h2>
-    <div class="products-grid">
-      <div class="product-card">
-        <img src="https://cdn.pixabay.com/photo/2021/01/22/20/10/receipt-5940849_640.jpg" alt="Thermal Roll">
+    <img src="https://cdn.pixabay.com/photo/2021/01/22/20/10/receipt-5940849_640.jpg" alt="POS Thermal Roll">
+
         <h3>57x40mm POS Roll</h3>
         <p>Standard for supermarkets, shops & MPESA</p>
       </div>
