--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rayan Thermal Paper Roll</title>
   <style>
     body {
@@ -50,45 +49,70 @@
       border: none;
       font-size: 16px;
       cursor: pointer;
+      border-radius: 4px;
     }
     .section {
       padding: 40px 20px;
       background: #ffffff;
       margin: 20px auto;
       max-width: 1000px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      border-radius: 8px;
     }
     .products-grid {
       display: flex;
       justify-content: space-around;
       flex-wrap: wrap;
+      gap: 20px;
     }
     .product-card {
       width: 280px;
       background: #f9f9f9;
-      margin: 15px;
       padding: 15px;
       border: 1px solid #ccc;
       text-align: center;
+      border-radius: 6px;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+      transition: transform 0.2s ease;
+    }
+    .product-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
     }
     .product-card img {
       width: 100%;
       height: auto;
+      border-radius: 4px;
+      margin-bottom: 12px;
     }
     .badges {
       display: flex;
       justify-content: space-around;
       background: #e9f5ff;
       padding: 20px;
+      max-width: 800px;
+      margin: 0 auto;
+      border-radius: 8px;
     }
     .badge {
       text-align: center;
       font-weight: bold;
+      font-size: 16px;
+      color: #007bff;
     }
     footer {
       background: #333;
       color: white;
       text-align: center;
       padding: 20px;
+      margin-top: 40px;
+    }
+    a {
+      color: #007bff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -97,59 +121,64 @@
     <h1>Rayan Thermal Paper Roll</h1>
     <p>High-Quality POS Thermal Paper Supplies – Fast Delivery in Kenya</p>
   </header>
+  
   <nav>
     <a href="#products">Products</a>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
   </nav>
-
+  
   <section class="hero">
     <h1>Your Trusted Thermal Paper Supplier</h1>
     <p>Affordable. Reliable. Delivered to your door.</p>
     <button onclick="window.location.href='#contact'">Order Now via WhatsApp</button>
   </section>
-
+  
   <section class="badges">
     <div class="badge">✅ Free Delivery</div>
     <div class="badge">💵 Best Price Guarantee</div>
     <div class="badge">📦 Bulk Orders Available</div>
   </section>
-
+  
   <section id="products" class="section">
     <h2>Our Products</h2>
-    <img src="https://cdn.pixabay.com/photo/2021/01/22/20/10/receipt-5940849_640.jpg" alt="POS Thermal Roll">
-
+    <div class="products-grid">
+      <div class="product-card">
+        <img src="https://cdn.pixabay.com/photo/2021/01/22/20/10/receipt-5940849_640.jpg" alt="POS Thermal Roll" />
         <h3>57x40mm POS Roll</h3>
         <p>Standard for supermarkets, shops & MPESA</p>
       </div>
       <div class="product-card">
-        <img src="https://cdn.pixabay.com/photo/2017/08/30/07/52/receipt-2698847_640.jpg" alt="POS Paper">
+        <img src="https://cdn.pixabay.com/photo/2017/08/30/07/52/receipt-2698847_640.jpg" alt="POS Paper" />
         <h3>80x80mm POS Roll</h3>
         <p>Ideal for busy retail or restaurant printers</p>
       </div>
       <div class="product-card">
-        <img src="https://cdn.pixabay.com/photo/2016/10/24/13/30/thermal-paper-1768461_640.jpg" alt="Bulk Rolls">
+        <img src="https://cdn.pixabay.com/photo/2016/10/24/13/30/thermal-paper-1768461_640.jpg" alt="Bulk Rolls" />
         <h3>Bulk Boxes (50 rolls)</h3>
         <p>Wholesale prices with delivery across Kenya</p>
       </div>
     </div>
   </section>
-
+  
   <section id="about" class="section">
     <h2>About Rayan</h2>
-    <p>Rayan Thermal Paper Roll is a Kenyan supplier focused on delivering top-quality thermal paper rolls for POS machines, ATMs, and printers. We prioritize quality, fast delivery, and customer satisfaction. Our clients range from supermarkets and shops to pharmacies and hotels across Kenya.</p>
+    <p>
+      Rayan Thermal Paper Roll is a Kenyan supplier focused on delivering top-quality thermal paper rolls for POS machines, ATMs, and printers. We prioritize quality, fast delivery, and customer satisfaction. Our clients range from supermarkets and shops to pharmacies and hotels across Kenya.
+    </p>
   </section>
-
+  
   <section id="contact" class="section">
     <h2>Contact & Orders</h2>
     <p>📞 Call us: <strong>0712 345 678</strong></p>
-    <p>📱 WhatsApp: <strong><a href="https://wa.me/254712345678" target="_blank">Click to Chat</a></strong></p>
+    <p>📱 WhatsApp: <strong><a href="https://wa.me/254712345678" target="_blank" rel="noopener noreferrer">Click to Chat</a></strong></p>
     <p>📧 Email: <strong>rayanthermalrolls@gmail.com</strong></p>
     <p>📍 Location: Nairobi, Kenya</p>
   </section>
-
+  
   <footer>
     <p>&copy; 2025 Rayan Thermal Paper Roll. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
