--- a/index.html
+++ b/index.html
@@ -5,107 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rayan Thermal Paper Roll</title>
   <style>
+    /* Reset & base */
+    *, *::before, *::after {
+      box-sizing: border-box;
+    }
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
       background: #f4f4f4;
-    }
-    header {
-      background-color: #007bff;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    nav {
-      background: #0056b3;
-      padding: 10px;
-      text-align: center;
-    }
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .hero {
-      padding: 60px 20px;
-      text-align: center;
-      background: url('https://cdn.pixabay.com/photo/2016/10/24/13/30/thermal-paper-1768461_1280.jpg') center/cover no-repeat;
-      color: white;
-    }
-    .hero h1 {
-      font-size: 36px;
-      margin-bottom: 15px;
-    }
-    .hero p {
-      font-size: 18px;
-      margin-bottom: 25px;
-    }
-    .hero button {
-      padding: 12px 24px;
-      background-color: #28a745;
-      color: white;
-      border: none;
-      font-size: 16px;
-      cursor: pointer;
-      border-radius: 4px;
-    }
-    .section {
-      padding: 40px 20px;
-      background: #ffffff;
-      margin: 20px auto;
-      max-width: 1000px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      border-radius: 8px;
-    }
-    .products-grid {
-      display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      gap: 20px;
-    }
-    .product-card {
-      width: 280px;
-      background: #f9f9f9;
-      padding: 15px;
-      border: 1px solid #ccc;
-      text-align: center;
-      border-radius: 6px;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-      transition: transform 0.2s ease;
-    }
-    .product-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
-    }
-    .product-card img {
-      width: 100%;
-      height: auto;
-      border-radius: 4px;
-      margin-bottom: 12px;
-    }
-    .badges {
-      display: flex;
-      justify-content: space-around;
-      background: #e9f5ff;
-      padding: 20px;
-      max-width: 800px;
-      margin: 0 auto;
-      border-radius: 8px;
-    }
-    .badge {
-      text-align: center;
-      font-weight: bold;
-      font-size: 16px;
-      color: #007bff;
-    }
-    footer {
-      background: #333;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
+      color: #333;
+      line-height: 1.6;
     }
     a {
       color: #007bff;
@@ -114,6 +24,214 @@
     a:hover {
       text-decoration: underline;
     }
+
+    /* Header */
+    header {
+      background-color: #007bff;
+      color: white;
+      padding: 20px 15px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.2rem;
+    }
+    header p {
+      margin: 8px 0 0;
+      font-weight: 500;
+    }
+
+    /* Navigation */
+    nav {
+      background: #0056b3;
+      text-align: center;
+      padding: 12px 0;
+    }
+    nav a {
+      color: white;
+      margin: 0 18px;
+      font-weight: 600;
+      font-size: 1rem;
+      padding: 6px 12px;
+      display: inline-block;
+      transition: background-color 0.3s ease;
+      border-radius: 4px;
+    }
+    nav a:hover,
+    nav a:focus {
+      background-color: #003d80;
+      outline: none;
+    }
+
+    /* Hero Section */
+    .hero {
+      padding: 80px 20px;
+      text-align: center;
+      background: url('https://cdn.pixabay.com/photo/2016/10/24/13/30/thermal-paper-1768461_1280.jpg') center/cover no-repeat;
+      color: white;
+      position: relative;
+    }
+    .hero::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0,0,0,0.45);
+      z-index: 0;
+    }
+    .hero h1,
+    .hero p,
+    .hero button {
+      position: relative;
+      z-index: 1;
+    }
+    .hero h1 {
+      font-size: 2.8rem;
+      margin-bottom: 12px;
+    }
+    .hero p {
+      font-size: 1.25rem;
+      margin-bottom: 28px;
+      font-weight: 500;
+    }
+    .hero button {
+      background-color: #28a745;
+      border: none;
+      color: white;
+      padding: 14px 32px;
+      font-size: 1.1rem;
+      cursor: pointer;
+      border-radius: 6px;
+      transition: background-color 0.3s ease;
+    }
+    .hero button:hover,
+    .hero button:focus {
+      background-color: #218838;
+      outline: none;
+    }
+
+    /* Badges Section */
+    .badges {
+      max-width: 900px;
+      margin: 40px auto 20px;
+      display: flex;
+      justify-content: space-around;
+      background: #e9f5ff;
+      padding: 24px 15px;
+      border-radius: 10px;
+      gap: 15px;
+      flex-wrap: wrap;
+      font-weight: 600;
+      color: #007bff;
+      font-size: 1.1rem;
+    }
+    .badge {
+      flex: 1 1 180px;
+      text-align: center;
+      background: white;
+      border-radius: 8px;
+      padding: 12px 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      user-select: none;
+    }
+
+    /* Sections */
+    .section {
+      max-width: 1000px;
+      background: white;
+      margin: 30px auto;
+      padding: 40px 30px;
+      border-radius: 12px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    }
+    .section h2 {
+      font-size: 2rem;
+      margin-bottom: 24px;
+      color: #0056b3;
+      text-align: center;
+    }
+
+    /* Products Grid */
+    .products-grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 25px;
+      justify-content: center;
+    }
+    .product-card {
+      background: #f9f9f9;
+      border-radius: 10px;
+      width: 280px;
+      padding: 20px;
+      box-shadow: 0 1px 5px rgba(0,0,0,0.1);
+      text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .product-card:hover,
+    .product-card:focus-within {
+      transform: translateY(-7px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      outline: none;
+    }
+    .product-card img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 16px;
+      object-fit: contain;
+    }
+    .product-card h3 {
+      margin: 0 0 10px;
+      font-size: 1.25rem;
+      color: #007bff;
+    }
+    .product-card p {
+      margin: 0;
+      font-size: 1rem;
+      color: #444;
+    }
+
+    /* Contact Section */
+    #contact p {
+      font-size: 1.1rem;
+      margin: 12px 0;
+      text-align: center;
+    }
+    #contact strong {
+      color: #007bff;
+    }
+    #contact a {
+      font-weight: 700;
+      color: #28a745;
+    }
+    #contact a:hover {
+      text-decoration: underline;
+    }
+
+    /* Footer */
+    footer {
+      background: #333;
+      color: white;
+      text-align: center;
+      padding: 20px 15px;
+      font-size: 0.95rem;
+      margin-top: 60px;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      nav a {
+        margin: 0 10px;
+        font-size: 0.95rem;
+      }
+      .products-grid {
+        gap: 20px;
+      }
+      .product-card {
+        width: 100%;
+        max-width: 350px;
+        margin: 0 auto;
+      }
+    }
   </style>
 </head>
 <body>
@@ -121,64 +239,66 @@
     <h1>Rayan Thermal Paper Roll</h1>
     <p>High-Quality POS Thermal Paper Supplies – Fast Delivery in Kenya</p>
   </header>
-  
+
   <nav>
     <a href="#products">Products</a>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
   </nav>
-  
-  <section class="hero">
+
+  <section class="hero" role="banner" aria-label="Hero Section with call to action">
     <h1>Your Trusted Thermal Paper Supplier</h1>
     <p>Affordable. Reliable. Delivered to your door.</p>
-    <button onclick="window.location.href='#contact'">Order Now via WhatsApp</button>
+    <button onclick="window.location.href='#contact'" aria-label="Order Now via WhatsApp">Order Now via WhatsApp</button>
   </section>
-  
-  <section class="badges">
+
+  <section class="badges" aria-label="Key Service Benefits">
     <div class="badge">✅ Free Delivery</div>
     <div class="badge">💵 Best Price Guarantee</div>
     <div class="badge">📦 Bulk Orders Available</div>
   </section>
-  
-  <section id="products" class="section">
+
+  <section id="products" class="section" aria-label="Our Products">
     <h2>Our Products</h2>
     <div class="products-grid">
-      <div class="product-card">
-        <img src="https://cdn.pixabay.com/photo/2021/01/22/20/10/receipt-5940849_640.jpg" alt="POS Thermal Roll" />
+      <article class="product-card" tabindex="0">
+        <img src="https://cdn.pixabay.com/photo/2021/01/22/20/10/receipt-5940849_640.jpg" alt="57x40mm POS Thermal Paper Roll" loading="lazy" />
         <h3>57x40mm POS Roll</h3>
         <p>Standard for supermarkets, shops & MPESA</p>
-      </div>
-      <div class="product-card">
-        <img src="https://cdn.pixabay.com/photo/2017/08/30/07/52/receipt-2698847_640.jpg" alt="POS Paper" />
+      </article>
+      <article class="product-card" tabindex="0">
+        <img src="https://cdn.pixabay.com/photo/2017/08/30/07/52/receipt-2698847_640.jpg" alt="80x80mm POS Thermal Paper Roll" loading="lazy" />
         <h3>80x80mm POS Roll</h3>
         <p>Ideal for busy retail or restaurant printers</p>
-      </div>
-      <div class="product-card">
-        <img src="https://cdn.pixabay.com/photo/2016/10/24/13/30/thermal-paper-1768461_640.jpg" alt="Bulk Rolls" />
+      </article>
+      <article class="product-card" tabindex="0">
+        <img src="https://cdn.pixabay.com/photo/2016/10/24/13/30/thermal-paper-1768461_640.jpg" alt="Bulk Thermal Paper Rolls" loading="lazy" />
         <h3>Bulk Boxes (50 rolls)</h3>
         <p>Wholesale prices with delivery across Kenya</p>
-      </div>
+      </article>
     </div>
   </section>
-  
-  <section id="about" class="section">
+
+  <section id="about" class="section" aria-label="About Rayan Thermal Paper Roll">
     <h2>About Rayan</h2>
     <p>
-      Rayan Thermal Paper Roll is a Kenyan supplier focused on delivering top-quality thermal paper rolls for POS machines, ATMs, and printers. We prioritize quality, fast delivery, and customer satisfaction. Our clients range from supermarkets and shops to pharmacies and hotels across Kenya.
+      Rayan Thermal Paper Roll is a Kenyan supplier focused on delivering top-quality thermal paper rolls for POS machines, ATMs, and printers.
+      We prioritize quality, fast delivery, and customer satisfaction. Our clients range from supermarkets and shops to pharmacies and hotels across Kenya.
     </p>
   </section>
-  
-  <section id="contact" class="section">
+
+  <section id="contact" class="section" aria-label="Contact and Orders">
     <h2>Contact & Orders</h2>
     <p>📞 Call us: <strong>0712 345 678</strong></p>
     <p>📱 WhatsApp: <strong><a href="https://wa.me/254712345678" target="_blank" rel="noopener noreferrer">Click to Chat</a></strong></p>
     <p>📧 Email: <strong>rayanthermalrolls@gmail.com</strong></p>
     <p>📍 Location: Nairobi, Kenya</p>
   </section>
-  
+
   <footer>
     <p>&copy; 2025 Rayan Thermal Paper Roll. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
 
