--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     .hero {
       padding: 60px 20px;
       text-align: center;
-      background: url('https://images.unsplash.com/photo-1616963247603-923c1d8fc4e9?auto=format&fit=crop&w=1280&q=80') center/cover no-repeat;
+      background: url(WhatsApp Image 2025-06-20 at 16.34.40.jpeg) center/cover no-repeat;
       color: white;
     }
     .hero h1 {
