--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <h2>Our Products</h2>
     <div class="products-grid">
       <div class="product-card">
-        <img src="https://images.unsplash.com/photo-1602526216432-cffcb3d7ba3b?auto=format&fit=crop&w=600&q=60" alt="57x40mm POS Roll" />
+        <img src="WhatsApp Image 2025-06-20 at 16.34.40.jpeg" alt="57x40mm POS Roll" />
         <h3>57x40mm POS Roll</h3>
         <p>Standard for supermarkets, shops & MPESA</p>
         <a href="https://wa.me/254713171865?text=I%20want%2057x40mm%20POS%20Roll">Order via WhatsApp</a>
