--- a/index.html
+++ b/index.html
@@ -2,185 +2,153 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Rayan Thermal Paper Roll</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Abdihakim Nur Resume</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
-      background: #f4f4f4;
+      background: #f5f8fc;
+      color: #333;
+    }
+    .resume {
+      max-width: 900px;
+      margin: 30px auto;
+      background: #fff;
+      padding: 40px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+      border-radius: 8px;
     }
     header {
-      background-color: #007bff;
-      color: white;
-      padding: 20px;
       text-align: center;
+      border-bottom: 2px solid #0073e6;
+      padding-bottom: 20px;
     }
-    nav {
-      background: #0056b3;
-      padding: 10px;
-      text-align: center;
+    header img {
+      width: 120px;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-bottom: 10px;
     }
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
+    header h1 {
+      margin-bottom: 5px;
+      font-size: 32px;
+      color: #0073e6;
     }
-    .hero {
-      padding: 60px 20px;
-      text-align: center;
-      background: url(WhatsApp Image 2025-06-20 at 16.34.40.jpeg) center/cover no-repeat;
-      color: white;
+    header p {
+      margin: 2px 0;
     }
-    .hero h1 {
-      font-size: 36px;
-      margin-bottom: 15px;
-    }
-    .hero p {
-      font-size: 18px;
-      margin-bottom: 25px;
-    }
-    .hero button {
-      padding: 12px 24px;
-      background-color: #28a745;
-      color: white;
-      border: none;
-      font-size: 16px;
-      cursor: pointer;
-      border-radius: 4px;
-    }
-    .section {
-      padding: 40px 20px;
-      background: #ffffff;
-      margin: 20px auto;
-      max-width: 1000px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      border-radius: 8px;
-    }
-    .products-grid {
-      display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      gap: 20px;
-    }
-    .product-card {
-      width: 280px;
-      background: #f9f9f9;
-      padding: 15px;
-      border: 1px solid #ccc;
-      text-align: center;
-      border-radius: 6px;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-    }
-    .product-card img {
-      width: 100%;
-      height: auto;
-      border-radius: 4px;
-      margin-bottom: 12px;
-    }
-    .badges {
-      display: flex;
-      justify-content: space-around;
-      background: #e9f5ff;
-      padding: 20px;
-      max-width: 800px;
-      margin: 0 auto;
-      border-radius: 8px;
-    }
-    .badge {
-      text-align: center;
-      font-weight: bold;
-      font-size: 16px;
-      color: #007bff;
-    }
-    footer {
-      background: #333;
-      color: white;
-      text-align: center;
-      padding: 20px;
+    h2 {
+      color: #0073e6;
+      border-bottom: 1px solid #0073e6;
+      padding-bottom: 5px;
       margin-top: 40px;
     }
-    a {
-      color: #007bff;
-      text-decoration: none;
+    ul {
+      padding-left: 20px;
     }
-    a:hover {
-      text-decoration: underline;
+    .section {
+      margin-top: 20px;
+    }
+    .job, .school, .referee {
+      margin-bottom: 15px;
+    }
+    .job ul {
+      margin-top: 10px;
+    }
+    .label {
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
+  <div class="resume">
+    <header>
+      <img src="https://via.placeholder.com/120" alt="Abdihakim Nur Photo" />
+      <h1>Abdihakim Nur Adan</h1>
+      <p><strong>Town Planner</strong></p>
+      <p>+254 722 483 915 | abdihakimnur60@gmail.com</p>
+      <p>DD PLAZA, Nairobi, Kenya | www.reallygreatsite.com</p>
+    </header>
 
-  <header>
-    <h1>Rayan Thermal Paper Roll</h1>
-    <p>High-Quality POS Thermal Paper Supplies – Fast Delivery in Kenya</p>
-  </header>
+    <section class="section">
+      <h2>Profile</h2>
+      <p>I am a passionate and skilled Town Planner with strong expertise in ArcGIS, Archicad, AutoCAD, SPSS, and Adobe Illustrator. I use ArcGIS for spatial data analysis and mapping, ArchiCAD and AutoCAD for detailed planning design, SPSS for statistical analysis and research, and Adobe Illustrator to create clear, professional visual presentations. My planning approach focuses on sustainability, functionality, and data-driven decision-making to deliver efficient and inclusive urban solutions.</p>
+    </section>
 
-  <nav>
-    <a href="#products">Products</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-  </nav>
+    <section class="section">
+      <h2>Skills</h2>
+      <ul>
+        <li>Project Management</li>
+        <li>Public Relations</li>
+        <li>Teamwork</li>
+        <li>Time Management</li>
+        <li>Leadership</li>
+        <li>Effective Communication</li>
+        <li>Critical Thinking</li>
+      </ul>
+    </section>
 
-  <section class="hero">
-    <h1>Your Trusted Thermal Paper Supplier</h1>
-    <p>Affordable. Reliable. Delivered to your door.</p>
-    <button onclick="window.location.href='https://wa.me/254713171865?text=Hello%2C%20I%20am%20interested%20in%20thermal%20paper%20rolls'">
-      Order Now via WhatsApp
-    </button>
-  </section>
+    <section class="section">
+      <h2>Languages</h2>
+      <ul>
+        <li>English (Fluent)</li>
+        <li>Swahili (Fluent)</li>
+        <li>Somali (Native)</li>
+        <li>Arabic (Basic)</li>
+      </ul>
+    </section>
 
-  <section class="badges">
-    <div class="badge">✅ Free Delivery</div>
-    <div class="badge">💵 Best Price Guarantee</div>
-    <div class="badge">📦 Bulk Orders Available</div>
-  </section>
-
-  <section id="products" class="section">
-    <h2>Our Products</h2>
-    <div class="products-grid">
-      <div class="product-card">
-        <img src="WhatsApp Image 2025-06-20 at 16.34.40.jpeg" alt="57x40mm POS Roll" />
-        <h3>57x40mm POS Roll</h3>
-        <p>Standard for supermarkets, shops & MPESA</p>
-        <a href="https://wa.me/254713171865?text=I%20want%2057x40mm%20POS%20Roll">Order via WhatsApp</a>
+    <section class="section">
+      <h2>Education</h2>
+      <div class="school">
+        <p class="label">University of Nairobi</p>
+        <p>Bachelor of Arts in Planning | 2023 – 2027</p>
       </div>
-      <div class="product-card">
-        <img src="https://images.unsplash.com/photo-1574395771464-5c2b4c212d6e?auto=format&fit=crop&w=600&q=60" alt="80x80mm POS Roll" />
-        <h3>80x80mm POS Roll</h3>
-        <p>Ideal for busy retail or restaurant printers</p>
-        <a href="https://wa.me/254713171865?text=I%20want%2080x80mm%20POS%20Roll">Order via WhatsApp</a>
+      <div class="school">
+        <p class="label">Sabunley Secondary School</p>
+        <p>Certificate of Secondary Education | 2019 – 2022</p>
+        <p>GPA: 57 / 84 (B-)</p>
       </div>
-      <div class="product-card">
-        <img src="https://images.unsplash.com/photo-1583337130417-3346a1a4a61d?auto=format&fit=crop&w=600&q=60" alt="Bulk Boxes" />
-        <h3>Bulk Boxes (50 rolls)</h3>
-        <p>Wholesale prices with delivery across Kenya</p>
-        <a href="https://wa.me/254713171865?text=I%20want%20Bulk%20Boxes%20of%20Thermal%20Rolls">Order via WhatsApp</a>
+    </section>
+
+    <section class="section">
+      <h2>Work Experience</h2>
+      <div class="job">
+        <p class="label">Borcelle Studio</p>
+        <p>Marketing Manager & Specialist | 2030 – Present</p>
       </div>
-    </div>
-  </section>
+      <div class="job">
+        <p class="label">Fauget Studio</p>
+        <p>Marketing Manager & Specialist | 2025 – 2029</p>
+      </div>
+      <div class="job">
+        <p class="label">Studio Shodwe</p>
+        <p>Marketing Manager & Specialist | 2024 – 2025</p>
+        <ul>
+          <li>Developed and executed comprehensive marketing strategies.</li>
+          <li>Led a high-performing marketing team.</li>
+          <li>Maintained brand consistency across channels.</li>
+          <li>Managed marketing budgets and optimized ROI.</li>
+          <li>Conducted market research and identified trends.</li>
+          <li>Built strong agency and vendor relationships.</li>
+        </ul>
+      </div>
+    </section>
 
-  <section id="about" class="section">
-    <h2>About Rayan</h2>
-    <p>
-      Rayan Thermal Paper Roll is a Kenyan supplier focused on delivering top-quality thermal paper rolls for POS machines, ATMs, and printers. We prioritize quality, fast delivery, and customer satisfaction. Our clients range from supermarkets and shops to pharmacies and hotels across Kenya.
-    </p>
-  </section>
-
-  <section id="contact" class="section">
-    <h2>Contact & Orders</h2>
-    <p>📞 Call us: <strong>0713 171 865</strong></p>
-    <p>📱 WhatsApp: <strong><a href="https://wa.me/254713171865" target="_blank" rel="noopener">Click to Chat</a></strong></p>
-    <p>📧 Email: <strong>rayanthermalrolls@gmail.com</strong></p>
-    <p>📍 Location: Nairobi, Kenya</p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Rayan Thermal Paper Roll. All rights reserved.</p>
-  </footer>
-
+    <section class="section">
+      <h2>References</h2>
+      <div class="referee">
+        <p><strong>Harper Richard</strong> – CEO, Wardiere Inc.</p>
+        <p>Phone: 123-456-7890 | Email: hello@reallygreatsite.com</p>
+      </div>
+      <div class="referee">
+        <p><strong>Estelle Darcy</strong> – CTO, Wardiere Inc.</p>
+        <p>Phone: 123-456-7890 | Email: hello@reallygreatsite.com</p>
+      </div>
+    </section>
+  </div>
 </body>
 </html>
-
